Fix on mobile app context style

--- a/apps/interactor/src/components/indicators-display/IndicatorsDisplay.scss
+++ b/apps/interactor/src/components/indicators-display/IndicatorsDisplay.scss
@@ -14,7 +14,7 @@
   background: $background-1;
 
   &.mobile {
-    top: 70px;
+    top: 80px;
   }
 
   &.open {
